fixed rick not showing up in full glory

--- a/src/app/login.component.css
+++ b/src/app/login.component.css
@@ -65,6 +65,13 @@
   font-size: xx-large;
 }
 
+.rickityWrecked{
+
+  position: fixed;
+  width: -webkit-fill-available;
+  height: -webkit-fill-available;
+}
+
 @keyframes fadeIn {
   0%   {opacity:0}
   100% {opacity:1}
